dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-app
  namespace: dev
  labels:
    app: argocd-app
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: argocd-app
  template:
    metadata:
      labels:
        app: argocd-app
    spec:
      containers:
      - image: wil42/playground:v1
        name: playground
        ports:
        - containerPort: 8888
