dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-app
  namespace: dev
spec:
  ports:
  - port: 80
    targetPort: 8888
  selector:
    app: argocd-app
